added code to HTML file

--- a/index.html
+++ b/index.html
@@ -12,7 +12,39 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <!-- Student code goes here -->
+      <section class="card" id="html-section">
+        <h2>HTML</h2>
+          <ul>
+            <li>The head element contains info about the webpage, for the browser.</li>
+            <li>The body element contains all the visible content on a webpage.</li>
+            <li>The Meta element item, 'UTF-8', is the most common for use in webpages.</li>
+            <li>Elements nested within other elements are called child elements, within the parent elements.</li>
+            <li>All content in a webpage is closed within "tags", usign the "<" and ">" symbols.</li>
+          </ul>
+      </section>
+   
+      <section class="card" id="css-section">
+        <h2>CSS</h2>
+          <ul>
+            <li>Enter CSS notes here</li>
+          </ul>
+      </section>
+   
+      <section class="card" id="git-section">
+        <h2>Git</h2>
+          <ul>
+            <li>git status - Checks what branch we are currently on</li>
+            <li>git checkout -b branch-name - Creates a new branch and switches to it</li>
+            <li>git add -A - Used to commit all files in the working branch.</li>
+          </ul>
+      </section>
+   
+      <section class="card" id="javascript-section">
+        <h2>JavaScript</h2>
+          <ul>
+            <li>Enter JavaScript notes here</li>
+          </ul>
+      </section>
     </main>
 
     <footer>
