added code to HTML file

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             <li>git status - Checks what branch we are currently on</li>
             <li>git checkout -b branch-name - Creates a new branch and switches to it</li>
             <li>git add -A - Used to commit all files in the working branch.</li>
+            <li>git commit -m "commit message" - Commits new entries/work to the GitHub repo, with a short descriptive message.</li>
           </ul>
       </section>
    
