added CSS to project

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -25,8 +26,18 @@
    
       <section class="card" id="css-section">
         <h2>CSS</h2>
+        <ul><li>There are 3 ways to style a page using CSS:</li></ul>
+          <ol type="number">
+            <li>Inline CSS - Apply CSS style rules to a specific HTML tag. Useful for quick changes, but can only change one element at a time.</li>
+            <li>Internal CSS style sheet - Can embed a style sheet nesting a "style" element within the "head" element.</li>
+            <li>External CSS style sheet - Most common as it allows all the CSS rules to stay within a separate file. File is linked using a "link" element in the "head" element.</li>
+          </ol>
           <ul>
-            <li>Enter CSS notes here</li>
+            <li>CSS dictates the colors, visual layout, and organization of the the page.</li>
+            <li>A margin indicates how much space we want around the outside of an element.</li>
+            <li>A padding indicates how much space we want around the content inside an element.</li>
+            <li>CSS uses "class" and "element" selectors to assist with formatting.</li>
+            <li>Class selector will apply styles to certain selected elements without affecting ALL of that element type.</li>
           </ul>
       </section>
    
@@ -49,6 +60,7 @@
     </main>
 
     <footer>
+      <br>
       <p>I can code!</p>
     </footer>
   </body>
