Added a random topic selector within script.js

--- a/index.html
+++ b/index.html
@@ -11,23 +11,25 @@
     <header id="top">
       <h1>Prework Study Guide</h1>
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie."/>
-      <h2>✨ Open the Console(Cmnd, opt, I) to See What's Happening ✨</h2>
+      <h2>✨ Open the Console(Cmnd, Opt, I) to See What's Happening ✨</h2>
     </header>
     <main>
       <section class="card" id="html-section">
         <h2>HTML</h2>
+        <br>
           <ul>
             <li>The head element contains info about the webpage, for the browser.</li>
             <li>The body element contains all the visible content on a webpage.</li>
-            <li>The Meta element item, 'UTF-8', is the most common for use in webpages.</li>
+            <li>The meta element item, 'UTF-8', is the most common for use in webpages.</li>
             <li>Elements nested within other elements are called child elements, within the parent elements.</li>
-            <li>All content in a webpage is closed within "tags", usign the "<" and ">" symbols.</li>
+            <li>All content in a webpage is closed within "tags", using the "<" and ">" symbols.</li>
           </ul>
       </section>
    
       <section class="card" id="css-section">
         <h2>CSS</h2>
-        <ul><li>There are 3 ways to style a page using CSS:</li></ul>
+        <br>
+        <p style="font-size: 23px;">There are 3 ways to style a page using CSS:</p>
           <ol type="number">
             <li>Inline CSS - Apply CSS style rules to a specific HTML tag. Useful for quick changes, but can only change one element at a time.</li>
             <li>Internal CSS style sheet - Can embed a style sheet nesting a "style" element within the "head" element.</li>
@@ -45,7 +47,8 @@
    
       <section class="card" id="git-section">
         <h2>Git</h2>
-          <p>Git Flow</p>
+        <br>
+          <p style="font-size: 23px;">Git Flow</p>
           <ol type="numbers">
             <li>git add -A - Stages all changes that occured within the working branch.</li>
             <li>git commit -m "commit message" - Commits new entries/work to the GitHub repo, with a short descriptive message.</li>
@@ -61,7 +64,13 @@
    
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
-          <p>JavaScript Types:</p>
+        <br>
+        <ul>
+          <li>A variable is a named container that allows us to store data in our code.</li>
+          <li>Order matters when using JavaScript. The script file should load top to bottom, as that is the way it is read. This is called "Control Flow". However, certain conditional statements can alter or interrupt this flow somewhat.</li>
+        </ul>
+        <br>
+          <p style="font-size: 23px;">JavaScript Data Types:</p>
             <ul>
               <li>Primitive values - All types except objects define "immutable values", values which can't be changed.</li>
               <li>Boolean type - Represents a logical entity that can have two values: true and false.</li>
@@ -75,8 +84,6 @@
               <li>Symbol type - A Symbol is a unique and immutable primitive value and may be used as the key of an object property. In some programming languages, symbols are called "atoms".</li>
               <li>Objects - In Comp Sci, an object is a value in memory which is possibly referencede by an identifier.</li>
               <li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures">Easy guide to all things JavaScript data types and data structures.</a></li>
-              <br>
-              <li>Order matters when using JavaScript. The script file should load top to bottom, as that is the way it is read. However, certain conditional statements can alter or interrupt this flow somewhat.</li>
             </ul>
       </section>
     </main>
